--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "element-plus": "^2.2.28",
     "eslint": "^8.33.0",
     "eslint-plugin-vue": "^9.9.0",
+    "mockjs": "^1.1.0",
     "nprogress": "^0.2.0",
     "pinia": "^2.0.30",
     "pinia-plugin-persist": "^1.0.0",
     "sass": "^1.58.0",
     "screenfull": "^6.0.2",
+    "vite-plugin-mock": "^2.9.6",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
   },
