--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc && vite build USE_MOCK=true",
-    "build:dev": "vite build --mode development USE_MOCK=true",
-    "build:pro": "vite build --mode production USE_CHUNK_MOCK=true",
+    "build": "cross-env USE_CHUNK_MOCK=true vite build",
+    "build:dev": "vite build --mode development cross-env USE_MOCK=true",
+    "build:pro": "vite build --mode production cross-env USE_CHUNK_MOCK=true",
     "preview": "vite preview",
     "lint": "eslint src --fix --ext .ts,.tsx,.vue,.js,.jsx"
   },
@@ -40,6 +40,7 @@
     "@iconify-json/ri": "^1.1.5",
     "@iconify-json/system-uicons": "^1.1.7",
     "@vitejs/plugin-vue": "^4.0.0",
+    "cross-env": "^7.0.3",
     "typescript": "^4.9.3",
     "unplugin-auto-import": "^0.13.0",
     "unplugin-icons": "^0.15.2",
