--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "nprogress": "^0.2.0",
     "pinia": "^2.0.30",
     "pinia-plugin-persist": "^1.0.0",
+    "pinyin-pro": "^3.13.1",
     "sass": "^1.58.0",
     "screenfull": "^6.0.2",
     "vite-plugin-mock": "^2.9.6",
